# bitcoin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  genesis_block.json
network/: bitcoin.conf
network/chainstate/: 000005.ldb
