cmake_minimum_required(VERSION 3.24)
project(bitcoin)

set(CMAKE_CXX_STANDARD 14)

include_directories(build_msvc)
include_directories(src)
include_directories(src/bench)
include_directories(src/bench/data)
include_directories(src/common)
include_directories(src/compat)
include_directories(src/config)
include_directories(src/consensus)
include_directories(src/crc32c/include)
include_directories(src/crc32c/include/crc32c)
include_directories(src/crc32c/src)
include_directories(src/crypto)
include_directories(src/crypto/ctaes)
include_directories(src/index)
include_directories(src/init)
include_directories(src/interfaces)
include_directories(src/ipc)
include_directories(src/ipc/capnp)
include_directories(src/kernel)
include_directories(src/leveldb/db)
include_directories(src/leveldb/helpers/memenv)
include_directories(src/leveldb/include)
include_directories(src/leveldb/include/leveldb)
include_directories(src/leveldb/port)
include_directories(src/leveldb/table)
include_directories(src/leveldb/util)
include_directories(src/logging)
include_directories(src/minisketch/include)
include_directories(src/minisketch/src)
include_directories(src/minisketch/src/fields)
include_directories(src/node)
include_directories(src/obj)
include_directories(src/policy)
include_directories(src/primitives)
include_directories(src/qt)
include_directories(src/qt/forms)
include_directories(src/qt/test)
include_directories(src/rpc)
include_directories(src/script)
include_directories(src/secp256k1/contrib)
include_directories(src/secp256k1/examples)
include_directories(src/secp256k1/include)
include_directories(src/secp256k1/src)
include_directories(src/secp256k1/src/modules)
include_directories(src/secp256k1/src/modules/ecdh)
include_directories(src/secp256k1/src/modules/extrakeys)
include_directories(src/secp256k1/src/modules/recovery)
include_directories(src/secp256k1/src/modules/schnorrsig)
include_directories(src/support)
include_directories(src/support/allocators)
include_directories(src/test)
include_directories(src/test/data)
include_directories(src/test/fuzz)
include_directories(src/test/fuzz/util)
include_directories(src/test/util)
include_directories(src/univalue/include)
include_directories(src/util)
include_directories(src/wallet)
include_directories(src/wallet/rpc)
include_directories(src/wallet/test)
include_directories(src/zmq)

add_executable(bitcoin
        build_msvc/libsecp256k1_config.h
        src/bench/data/block413567.raw.h
        src/bench/addrman.cpp
        src/bench/base58.cpp
        src/bench/bech32.cpp
        src/bench/bench.cpp
        src/bench/bench.h
        src/bench/bench_bitcoin.cpp
        src/bench/block_assemble.cpp
        src/bench/ccoins_caching.cpp
        src/bench/chacha20.cpp
        src/bench/chacha_poly_aead.cpp
        src/bench/checkblock.cpp
        src/bench/checkqueue.cpp
        src/bench/coin_selection.cpp
        src/bench/crypto_hash.cpp
        src/bench/data.cpp
        src/bench/data.h
        src/bench/descriptors.cpp
        src/bench/duplicate_inputs.cpp
        src/bench/examples.cpp
        src/bench/gcs_filter.cpp
        src/bench/hashpadding.cpp
        src/bench/load_external.cpp
        src/bench/lockedpool.cpp
        src/bench/logging.cpp
        src/bench/mempool_eviction.cpp
        src/bench/mempool_stress.cpp
        src/bench/merkle_root.cpp
        src/bench/nanobench.cpp
        src/bench/nanobench.h
        src/bench/peer_eviction.cpp
        src/bench/poly1305.cpp
        src/bench/prevector.cpp
        src/bench/rollingbloom.cpp
        src/bench/rpc_blockchain.cpp
        src/bench/rpc_mempool.cpp
        src/bench/strencodings.cpp
        src/bench/util_time.cpp
        src/bench/verify_script.cpp
        src/bench/wallet_balance.cpp
        src/bench/wallet_create_tx.cpp
        src/bench/wallet_loading.cpp
        src/common/bloom.cpp
        src/common/bloom.h
        src/common/interfaces.cpp
        src/common/run_command.cpp
        src/common/run_command.h
        src/common/url.cpp
        src/common/url.h
        src/compat/assumptions.h
        src/compat/byteswap.h
        src/compat/compat.h
        src/compat/cpuid.h
        src/compat/endian.h
        src/compat/stdin.cpp
        src/compat/stdin.h
        src/config/bitcoin-config.h
        src/consensus/amount.h
        src/consensus/consensus.h
        src/consensus/merkle.cpp
        src/consensus/merkle.h
        src/consensus/params.h
        src/consensus/tx_check.cpp
        src/consensus/tx_check.h
        src/consensus/tx_verify.cpp
        src/consensus/tx_verify.h
        src/consensus/validation.h
        src/crc32c/include/crc32c/crc32c.h
        src/crc32c/src/crc32c.cc
        src/crc32c/src/crc32c_arm64.cc
        src/crc32c/src/crc32c_arm64.h
        src/crc32c/src/crc32c_arm64_check.h
        src/crc32c/src/crc32c_arm64_unittest.cc
        src/crc32c/src/crc32c_benchmark.cc
        src/crc32c/src/crc32c_capi_unittest.c
        src/crc32c/src/crc32c_extend_unittests.h
        src/crc32c/src/crc32c_internal.h
        src/crc32c/src/crc32c_portable.cc
        src/crc32c/src/crc32c_portable_unittest.cc
        src/crc32c/src/crc32c_prefetch.h
        src/crc32c/src/crc32c_prefetch_unittest.cc
        src/crc32c/src/crc32c_read_le.h
        src/crc32c/src/crc32c_read_le_unittest.cc
        src/crc32c/src/crc32c_round_up.h
        src/crc32c/src/crc32c_round_up_unittest.cc
        src/crc32c/src/crc32c_sse42.cc
        src/crc32c/src/crc32c_sse42.h
        src/crc32c/src/crc32c_sse42_check.h
        src/crc32c/src/crc32c_sse42_unittest.cc
        src/crc32c/src/crc32c_test_main.cc
        src/crc32c/src/crc32c_unittest.cc
        src/crypto/ctaes/bench.c
        src/crypto/ctaes/ctaes.c
        src/crypto/ctaes/ctaes.h
        src/crypto/ctaes/test.c
        src/crypto/aes.cpp
        src/crypto/aes.h
        src/crypto/chacha20.cpp
        src/crypto/chacha20.h
        src/crypto/chacha_poly_aead.cpp
        src/crypto/chacha_poly_aead.h
        src/crypto/common.h
        src/crypto/hkdf_sha256_32.cpp
        src/crypto/hkdf_sha256_32.h
        src/crypto/hmac_sha256.cpp
        src/crypto/hmac_sha256.h
        src/crypto/hmac_sha512.cpp
        src/crypto/hmac_sha512.h
        src/crypto/muhash.cpp
        src/crypto/muhash.h
        src/crypto/poly1305.cpp
        src/crypto/poly1305.h
        src/crypto/ripemd160.cpp
        src/crypto/ripemd160.h
        src/crypto/sha1.cpp
        src/crypto/sha1.h
        src/crypto/sha256.cpp
        src/crypto/sha256.h
        src/crypto/sha256_arm_shani.cpp
        src/crypto/sha256_avx2.cpp
        src/crypto/sha256_sse4.cpp
        src/crypto/sha256_sse41.cpp
        src/crypto/sha256_x86_shani.cpp
        src/crypto/sha3.cpp
        src/crypto/sha3.h
        src/crypto/sha512.cpp
        src/crypto/sha512.h
        src/crypto/siphash.cpp
        src/crypto/siphash.h
        src/index/base.cpp
        src/index/base.h
        src/index/blockfilterindex.cpp
        src/index/blockfilterindex.h
        src/index/coinstatsindex.cpp
        src/index/coinstatsindex.h
        src/index/disktxpos.h
        src/index/txindex.cpp
        src/index/txindex.h
        src/init/bitcoin-gui.cpp
        src/init/bitcoin-node.cpp
        src/init/bitcoin-qt.cpp
        src/init/bitcoin-wallet.cpp
        src/init/bitcoind.cpp
        src/init/common.cpp
        src/init/common.h
        src/interfaces/chain.h
        src/interfaces/echo.h
        src/interfaces/handler.h
        src/interfaces/init.h
        src/interfaces/ipc.h
        src/interfaces/node.h
        src/interfaces/wallet.h
        src/ipc/capnp/context.h
        src/ipc/capnp/init-types.h
        src/ipc/capnp/protocol.cpp
        src/ipc/capnp/protocol.h
        src/ipc/context.h
        src/ipc/exception.h
        src/ipc/interfaces.cpp
        src/ipc/process.cpp
        src/ipc/process.h
        src/ipc/protocol.h
        src/kernel/bitcoinkernel.cpp
        src/kernel/chain.cpp
        src/kernel/chain.h
        src/kernel/chainstatemanager_opts.h
        src/kernel/checks.cpp
        src/kernel/checks.h
        src/kernel/coinstats.cpp
        src/kernel/coinstats.h
        src/kernel/context.cpp
        src/kernel/context.h
        src/kernel/cs_main.cpp
        src/kernel/cs_main.h
        src/kernel/mempool_entry.h
        src/kernel/mempool_limits.h
        src/kernel/mempool_options.h
        src/kernel/mempool_persist.cpp
        src/kernel/mempool_persist.h
        src/kernel/validation_cache_sizes.h
        src/leveldb/benchmarks/db_bench.cc
        src/leveldb/benchmarks/db_bench_sqlite3.cc
        src/leveldb/benchmarks/db_bench_tree_db.cc
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/dumpfile.cc
        src/leveldb/db/fault_injection_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldbutil.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/recovery_test.cc
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/dumpfile.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/export.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/issues/issue200_test.cc
        src/leveldb/issues/issue320_test.cc
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_stdcxx.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_posix_test.cc
        src/leveldb/util/env_posix_test_helper.h
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_windows.cc
        src/leveldb/util/env_windows_test.cc
        src/leveldb/util/env_windows_test_helper.h
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/hash_test.cc
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/logging_test.cc
        src/leveldb/util/mutexlock.h
        src/leveldb/util/no_destructor.h
        src/leveldb/util/no_destructor_test.cc
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/status_test.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/leveldb/util/windows_logger.h
        src/logging/timer.h
        src/minisketch/doc/example.c
        src/minisketch/include/minisketch.h
        src/minisketch/src/fields/clmul_1byte.cpp
        src/minisketch/src/fields/clmul_2bytes.cpp
        src/minisketch/src/fields/clmul_3bytes.cpp
        src/minisketch/src/fields/clmul_4bytes.cpp
        src/minisketch/src/fields/clmul_5bytes.cpp
        src/minisketch/src/fields/clmul_6bytes.cpp
        src/minisketch/src/fields/clmul_7bytes.cpp
        src/minisketch/src/fields/clmul_8bytes.cpp
        src/minisketch/src/fields/clmul_common_impl.h
        src/minisketch/src/fields/generic_1byte.cpp
        src/minisketch/src/fields/generic_2bytes.cpp
        src/minisketch/src/fields/generic_3bytes.cpp
        src/minisketch/src/fields/generic_4bytes.cpp
        src/minisketch/src/fields/generic_5bytes.cpp
        src/minisketch/src/fields/generic_6bytes.cpp
        src/minisketch/src/fields/generic_7bytes.cpp
        src/minisketch/src/fields/generic_8bytes.cpp
        src/minisketch/src/fields/generic_common_impl.h
        src/minisketch/src/bench.cpp
        src/minisketch/src/false_positives.h
        src/minisketch/src/fielddefines.h
        src/minisketch/src/int_utils.h
        src/minisketch/src/lintrans.h
        src/minisketch/src/minisketch.cpp
        src/minisketch/src/sketch.h
        src/minisketch/src/sketch_impl.h
        src/minisketch/src/test.cpp
        src/minisketch/src/util.h
        src/node/blockstorage.cpp
        src/node/blockstorage.h
        src/node/caches.cpp
        src/node/caches.h
        src/node/chainstate.cpp
        src/node/chainstate.h
        src/node/chainstatemanager_args.cpp
        src/node/chainstatemanager_args.h
        src/node/coin.cpp
        src/node/coin.h
        src/node/connection_types.cpp
        src/node/connection_types.h
        src/node/context.cpp
        src/node/context.h
        src/node/eviction.cpp
        src/node/eviction.h
        src/node/interface_ui.cpp
        src/node/interface_ui.h
        src/node/interfaces.cpp
        src/node/mempool_args.cpp
        src/node/mempool_args.h
        src/node/mempool_persist_args.cpp
        src/node/mempool_persist_args.h
        src/node/miner.cpp
        src/node/miner.h
        src/node/minisketchwrapper.cpp
        src/node/minisketchwrapper.h
        src/node/psbt.cpp
        src/node/psbt.h
        src/node/transaction.cpp
        src/node/transaction.h
        src/node/txreconciliation.cpp
        src/node/txreconciliation.h
        src/node/utxo_snapshot.cpp
        src/node/utxo_snapshot.h
        src/node/validation_cache_args.cpp
        src/node/validation_cache_args.h
        src/obj/build.h
        src/policy/feerate.cpp
        src/policy/feerate.h
        src/policy/fees.cpp
        src/policy/fees.h
        src/policy/fees_args.cpp
        src/policy/fees_args.h
        src/policy/packages.cpp
        src/policy/packages.h
        src/policy/policy.cpp
        src/policy/policy.h
        src/policy/rbf.cpp
        src/policy/rbf.h
        src/policy/settings.cpp
        src/policy/settings.h
        src/primitives/block.cpp
        src/primitives/block.h
        src/primitives/transaction.cpp
        src/primitives/transaction.h
        src/qt/forms/ui_addressbookpage.h
        src/qt/forms/ui_askpassphrasedialog.h
        src/qt/forms/ui_coincontroldialog.h
        src/qt/forms/ui_createwalletdialog.h
        src/qt/forms/ui_debugwindow.h
        src/qt/forms/ui_editaddressdialog.h
        src/qt/forms/ui_helpmessagedialog.h
        src/qt/forms/ui_intro.h
        src/qt/forms/ui_modaloverlay.h
        src/qt/forms/ui_openuridialog.h
        src/qt/forms/ui_optionsdialog.h
        src/qt/forms/ui_overviewpage.h
        src/qt/forms/ui_psbtoperationsdialog.h
        src/qt/forms/ui_receivecoinsdialog.h
        src/qt/forms/ui_receiverequestdialog.h
        src/qt/forms/ui_sendcoinsdialog.h
        src/qt/forms/ui_sendcoinsentry.h
        src/qt/forms/ui_signverifymessagedialog.h
        src/qt/forms/ui_transactiondescdialog.h
        src/qt/test/addressbooktests.cpp
        src/qt/test/addressbooktests.h
        src/qt/test/apptests.cpp
        src/qt/test/apptests.h
        src/qt/test/moc_addressbooktests.cpp
        src/qt/test/moc_apptests.cpp
        src/qt/test/moc_optiontests.cpp
        src/qt/test/moc_rpcnestedtests.cpp
        src/qt/test/moc_uritests.cpp
        src/qt/test/moc_wallettests.cpp
        src/qt/test/optiontests.cpp
        src/qt/test/optiontests.h
        src/qt/test/rpcnestedtests.cpp
        src/qt/test/rpcnestedtests.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/test/util.cpp
        src/qt/test/util.h
        src/qt/test/wallettests.cpp
        src/qt/test/wallettests.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bantablemodel.cpp
        src/qt/bantablemodel.h
        src/qt/bitcoin.cpp
        src/qt/bitcoin.h
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/createwalletdialog.cpp
        src/qt/createwalletdialog.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/initexecutor.cpp
        src/qt/initexecutor.h
        src/qt/intro.cpp
        src/qt/intro.h
        src/qt/macdockiconhandler.h
        src/qt/macdockiconhandler.mm
        src/qt/macnotificationhandler.h
        src/qt/macnotificationhandler.mm
        src/qt/macos_appnap.h
        src/qt/macos_appnap.mm
        src/qt/main.cpp
        src/qt/moc_addressbookpage.cpp
        src/qt/moc_addresstablemodel.cpp
        src/qt/moc_askpassphrasedialog.cpp
        src/qt/moc_bantablemodel.cpp
        src/qt/moc_bitcoin.cpp
        src/qt/moc_bitcoinaddressvalidator.cpp
        src/qt/moc_bitcoinamountfield.cpp
        src/qt/moc_bitcoingui.cpp
        src/qt/moc_bitcoinunits.cpp
        src/qt/moc_clientmodel.cpp
        src/qt/moc_coincontroldialog.cpp
        src/qt/moc_coincontroltreewidget.cpp
        src/qt/moc_createwalletdialog.cpp
        src/qt/moc_csvmodelwriter.cpp
        src/qt/moc_editaddressdialog.cpp
        src/qt/moc_guiutil.cpp
        src/qt/moc_initexecutor.cpp
        src/qt/moc_intro.cpp
        src/qt/moc_macdockiconhandler.cpp
        src/qt/moc_macnotificationhandler.cpp
        src/qt/moc_modaloverlay.cpp
        src/qt/moc_notificator.cpp
        src/qt/moc_openuridialog.cpp
        src/qt/moc_optionsdialog.cpp
        src/qt/moc_optionsmodel.cpp
        src/qt/moc_overviewpage.cpp
        src/qt/moc_paymentserver.cpp
        src/qt/moc_peertablemodel.cpp
        src/qt/moc_peertablesortproxy.cpp
        src/qt/moc_psbtoperationsdialog.cpp
        src/qt/moc_qrimagewidget.cpp
        src/qt/moc_qvalidatedlineedit.cpp
        src/qt/moc_qvaluecombobox.cpp
        src/qt/moc_receivecoinsdialog.cpp
        src/qt/moc_receiverequestdialog.cpp
        src/qt/moc_recentrequeststablemodel.cpp
        src/qt/moc_rpcconsole.cpp
        src/qt/moc_sendcoinsdialog.cpp
        src/qt/moc_sendcoinsentry.cpp
        src/qt/moc_signverifymessagedialog.cpp
        src/qt/moc_splashscreen.cpp
        src/qt/moc_trafficgraphwidget.cpp
        src/qt/moc_transactiondesc.cpp
        src/qt/moc_transactiondescdialog.cpp
        src/qt/moc_transactionfilterproxy.cpp
        src/qt/moc_transactionoverviewwidget.cpp
        src/qt/moc_transactiontablemodel.cpp
        src/qt/moc_transactionview.cpp
        src/qt/moc_utilitydialog.cpp
        src/qt/moc_walletcontroller.cpp
        src/qt/moc_walletframe.cpp
        src/qt/moc_walletmodel.cpp
        src/qt/moc_walletview.cpp
        src/qt/modaloverlay.cpp
        src/qt/modaloverlay.h
        src/qt/networkstyle.cpp
        src/qt/networkstyle.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/openuridialog.cpp
        src/qt/openuridialog.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/paymentserver.cpp
        src/qt/paymentserver.h
        src/qt/peertablemodel.cpp
        src/qt/peertablemodel.h
        src/qt/peertablesortproxy.cpp
        src/qt/peertablesortproxy.h
        src/qt/platformstyle.cpp
        src/qt/platformstyle.h
        src/qt/psbtoperationsdialog.cpp
        src/qt/psbtoperationsdialog.h
        src/qt/qrc_bitcoin.cpp
        src/qt/qrc_bitcoin_locale.cpp
        src/qt/qrimagewidget.cpp
        src/qt/qrimagewidget.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/receivecoinsdialog.cpp
        src/qt/receivecoinsdialog.h
        src/qt/receiverequestdialog.cpp
        src/qt/receiverequestdialog.h
        src/qt/recentrequeststablemodel.cpp
        src/qt/recentrequeststablemodel.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/sendcoinsrecipient.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/splashscreen.cpp
        src/qt/splashscreen.h
        src/qt/trafficgraphwidget.cpp
        src/qt/trafficgraphwidget.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionoverviewwidget.cpp
        src/qt/transactionoverviewwidget.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/utilitydialog.cpp
        src/qt/utilitydialog.h
        src/qt/walletcontroller.cpp
        src/qt/walletcontroller.h
        src/qt/walletframe.cpp
        src/qt/walletframe.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/qt/walletmodeltransaction.cpp
        src/qt/walletmodeltransaction.h
        src/qt/walletview.cpp
        src/qt/walletview.h
        src/qt/winshutdownmonitor.cpp
        src/qt/winshutdownmonitor.h
        src/rpc/blockchain.cpp
        src/rpc/blockchain.h
        src/rpc/client.cpp
        src/rpc/client.h
        src/rpc/external_signer.cpp
        src/rpc/fees.cpp
        src/rpc/mempool.cpp
        src/rpc/mempool.h
        src/rpc/mining.cpp
        src/rpc/mining.h
        src/rpc/net.cpp
        src/rpc/node.cpp
        src/rpc/output_script.cpp
        src/rpc/protocol.h
        src/rpc/rawtransaction.cpp
        src/rpc/rawtransaction_util.cpp
        src/rpc/rawtransaction_util.h
        src/rpc/register.h
        src/rpc/request.cpp
        src/rpc/request.h
        src/rpc/server.cpp
        src/rpc/server.h
        src/rpc/server_util.cpp
        src/rpc/server_util.h
        src/rpc/signmessage.cpp
        src/rpc/txoutproof.cpp
        src/rpc/util.cpp
        src/rpc/util.h
        src/script/bitcoinconsensus.cpp
        src/script/bitcoinconsensus.h
        src/script/descriptor.cpp
        src/script/descriptor.h
        src/script/interpreter.cpp
        src/script/interpreter.h
        src/script/keyorigin.h
        src/script/miniscript.cpp
        src/script/miniscript.h
        src/script/script.cpp
        src/script/script.h
        src/script/script_error.cpp
        src/script/script_error.h
        src/script/sigcache.cpp
        src/script/sigcache.h
        src/script/sign.cpp
        src/script/sign.h
        src/script/signingprovider.cpp
        src/script/signingprovider.h
        src/script/standard.cpp
        src/script/standard.h
        src/secp256k1/contrib/lax_der_parsing.c
        src/secp256k1/contrib/lax_der_parsing.h
        src/secp256k1/contrib/lax_der_privatekey_parsing.c
        src/secp256k1/contrib/lax_der_privatekey_parsing.h
        src/secp256k1/examples/ecdh.c
        src/secp256k1/examples/ecdsa.c
        src/secp256k1/examples/random.h
        src/secp256k1/examples/schnorr.c
        src/secp256k1/include/secp256k1.h
        src/secp256k1/include/secp256k1_ecdh.h
        src/secp256k1/include/secp256k1_extrakeys.h
        src/secp256k1/include/secp256k1_preallocated.h
        src/secp256k1/include/secp256k1_recovery.h
        src/secp256k1/include/secp256k1_schnorrsig.h
        src/secp256k1/src/modules/ecdh/bench_impl.h
        src/secp256k1/src/modules/ecdh/main_impl.h
        src/secp256k1/src/modules/ecdh/tests_impl.h
        src/secp256k1/src/modules/extrakeys/main_impl.h
        src/secp256k1/src/modules/extrakeys/tests_exhaustive_impl.h
        src/secp256k1/src/modules/extrakeys/tests_impl.h
        src/secp256k1/src/modules/recovery/bench_impl.h
        src/secp256k1/src/modules/recovery/main_impl.h
        src/secp256k1/src/modules/recovery/tests_exhaustive_impl.h
        src/secp256k1/src/modules/recovery/tests_impl.h
        src/secp256k1/src/modules/schnorrsig/bench_impl.h
        src/secp256k1/src/modules/schnorrsig/main_impl.h
        src/secp256k1/src/modules/schnorrsig/tests_exhaustive_impl.h
        src/secp256k1/src/modules/schnorrsig/tests_impl.h
        src/secp256k1/src/assumptions.h
        src/secp256k1/src/bench.c
        src/secp256k1/src/bench.h
        src/secp256k1/src/bench_ecmult.c
        src/secp256k1/src/bench_internal.c
        src/secp256k1/src/ecdsa.h
        src/secp256k1/src/ecdsa_impl.h
        src/secp256k1/src/eckey.h
        src/secp256k1/src/eckey_impl.h
        src/secp256k1/src/ecmult.h
        src/secp256k1/src/ecmult_compute_table.h
        src/secp256k1/src/ecmult_compute_table_impl.h
        src/secp256k1/src/ecmult_const.h
        src/secp256k1/src/ecmult_const_impl.h
        src/secp256k1/src/ecmult_gen.h
        src/secp256k1/src/ecmult_gen_compute_table.h
        src/secp256k1/src/ecmult_gen_compute_table_impl.h
        src/secp256k1/src/ecmult_gen_impl.h
        src/secp256k1/src/ecmult_impl.h
        src/secp256k1/src/field.h
        src/secp256k1/src/field_10x26.h
        src/secp256k1/src/field_10x26_impl.h
        src/secp256k1/src/field_5x52.h
        src/secp256k1/src/field_5x52_asm_impl.h
        src/secp256k1/src/field_5x52_impl.h
        src/secp256k1/src/field_5x52_int128_impl.h
        src/secp256k1/src/field_impl.h
        src/secp256k1/src/group.h
        src/secp256k1/src/group_impl.h
        src/secp256k1/src/hash.h
        src/secp256k1/src/hash_impl.h
        src/secp256k1/src/int128.h
        src/secp256k1/src/int128_impl.h
        src/secp256k1/src/int128_native.h
        src/secp256k1/src/int128_native_impl.h
        src/secp256k1/src/int128_struct.h
        src/secp256k1/src/int128_struct_impl.h
        src/secp256k1/src/libsecp256k1-config.h
        src/secp256k1/src/modinv32.h
        src/secp256k1/src/modinv32_impl.h
        src/secp256k1/src/modinv64.h
        src/secp256k1/src/modinv64_impl.h
        src/secp256k1/src/precompute_ecmult.c
        src/secp256k1/src/precompute_ecmult_gen.c
        src/secp256k1/src/precomputed_ecmult.c
        src/secp256k1/src/precomputed_ecmult.h
        src/secp256k1/src/precomputed_ecmult_gen.c
        src/secp256k1/src/precomputed_ecmult_gen.h
        src/secp256k1/src/scalar.h
        src/secp256k1/src/scalar_4x64.h
        src/secp256k1/src/scalar_4x64_impl.h
        src/secp256k1/src/scalar_8x32.h
        src/secp256k1/src/scalar_8x32_impl.h
        src/secp256k1/src/scalar_impl.h
        src/secp256k1/src/scalar_low.h
        src/secp256k1/src/scalar_low_impl.h
        src/secp256k1/src/scratch.h
        src/secp256k1/src/scratch_impl.h
        src/secp256k1/src/secp256k1.c
        src/secp256k1/src/selftest.h
        src/secp256k1/src/testrand.h
        src/secp256k1/src/testrand_impl.h
        src/secp256k1/src/tests.c
        src/secp256k1/src/tests_exhaustive.c
        src/secp256k1/src/util.h
        src/secp256k1/src/valgrind_ctime_test.c
        src/support/allocators/secure.h
        src/support/allocators/zeroafterfree.h
        src/support/cleanse.cpp
        src/support/cleanse.h
        src/support/events.h
        src/support/lockedpool.cpp
        src/support/lockedpool.h
        src/test/data/asmap.raw.h
        src/test/data/base58_encode_decode.json.h
        src/test/data/bip341_wallet_vectors.json.h
        src/test/data/blockfilters.json.h
        src/test/data/key_io_invalid.json.h
        src/test/data/key_io_valid.json.h
        src/test/data/script_tests.json.h
        src/test/data/sighash.json.h
        src/test/data/tx_invalid.json.h
        src/test/data/tx_valid.json.h
        src/test/fuzz/util/mempool.cpp
        src/test/fuzz/util/mempool.h
        src/test/fuzz/util/net.cpp
        src/test/fuzz/util/net.h
        src/test/fuzz/addition_overflow.cpp
        src/test/fuzz/addrman.cpp
        src/test/fuzz/asmap.cpp
        src/test/fuzz/asmap_direct.cpp
        src/test/fuzz/autofile.cpp
        src/test/fuzz/banman.cpp
        src/test/fuzz/base_encode_decode.cpp
        src/test/fuzz/bech32.cpp
        src/test/fuzz/bitdeque.cpp
        src/test/fuzz/block.cpp
        src/test/fuzz/block_header.cpp
        src/test/fuzz/blockfilter.cpp
        src/test/fuzz/bloom_filter.cpp
        src/test/fuzz/buffered_file.cpp
        src/test/fuzz/chain.cpp
        src/test/fuzz/checkqueue.cpp
        src/test/fuzz/coins_view.cpp
        src/test/fuzz/connman.cpp
        src/test/fuzz/crypto.cpp
        src/test/fuzz/crypto_aes256.cpp
        src/test/fuzz/crypto_aes256cbc.cpp
        src/test/fuzz/crypto_chacha20.cpp
        src/test/fuzz/crypto_chacha20_poly1305_aead.cpp
        src/test/fuzz/crypto_common.cpp
        src/test/fuzz/crypto_diff_fuzz_chacha20.cpp
        src/test/fuzz/crypto_hkdf_hmac_sha256_l32.cpp
        src/test/fuzz/crypto_poly1305.cpp
        src/test/fuzz/cuckoocache.cpp
        src/test/fuzz/decode_tx.cpp
        src/test/fuzz/descriptor_parse.cpp
        src/test/fuzz/deserialize.cpp
        src/test/fuzz/eval_script.cpp
        src/test/fuzz/fee_rate.cpp
        src/test/fuzz/fees.cpp
        src/test/fuzz/flatfile.cpp
        src/test/fuzz/float.cpp
        src/test/fuzz/fuzz.cpp
        src/test/fuzz/fuzz.h
        src/test/fuzz/FuzzedDataProvider.h
        src/test/fuzz/golomb_rice.cpp
        src/test/fuzz/hex.cpp
        src/test/fuzz/http_request.cpp
        src/test/fuzz/i2p.cpp
        src/test/fuzz/integer.cpp
        src/test/fuzz/key.cpp
        src/test/fuzz/key_io.cpp
        src/test/fuzz/kitchen_sink.cpp
        src/test/fuzz/load_external_block_file.cpp
        src/test/fuzz/locale.cpp
        src/test/fuzz/merkleblock.cpp
        src/test/fuzz/message.cpp
        src/test/fuzz/miniscript.cpp
        src/test/fuzz/minisketch.cpp
        src/test/fuzz/muhash.cpp
        src/test/fuzz/multiplication_overflow.cpp
        src/test/fuzz/net.cpp
        src/test/fuzz/net_permissions.cpp
        src/test/fuzz/netaddress.cpp
        src/test/fuzz/netbase_dns_lookup.cpp
        src/test/fuzz/node_eviction.cpp
        src/test/fuzz/p2p_transport_serialization.cpp
        src/test/fuzz/parse_hd_keypath.cpp
        src/test/fuzz/parse_numbers.cpp
        src/test/fuzz/parse_script.cpp
        src/test/fuzz/parse_univalue.cpp
        src/test/fuzz/partially_downloaded_block.cpp
        src/test/fuzz/policy_estimator.cpp
        src/test/fuzz/policy_estimator_io.cpp
        src/test/fuzz/pow.cpp
        src/test/fuzz/prevector.cpp
        src/test/fuzz/primitives_transaction.cpp
        src/test/fuzz/process_message.cpp
        src/test/fuzz/process_messages.cpp
        src/test/fuzz/protocol.cpp
        src/test/fuzz/psbt.cpp
        src/test/fuzz/random.cpp
        src/test/fuzz/rbf.cpp
        src/test/fuzz/rolling_bloom_filter.cpp
        src/test/fuzz/rpc.cpp
        src/test/fuzz/script.cpp
        src/test/fuzz/script_assets_test_minimizer.cpp
        src/test/fuzz/script_bitcoin_consensus.cpp
        src/test/fuzz/script_descriptor_cache.cpp
        src/test/fuzz/script_flags.cpp
        src/test/fuzz/script_format.cpp
        src/test/fuzz/script_interpreter.cpp
        src/test/fuzz/script_ops.cpp
        src/test/fuzz/script_sigcache.cpp
        src/test/fuzz/script_sign.cpp
        src/test/fuzz/scriptnum_ops.cpp
        src/test/fuzz/secp256k1_ec_seckey_import_export_der.cpp
        src/test/fuzz/secp256k1_ecdsa_signature_parse_der_lax.cpp
        src/test/fuzz/signature_checker.cpp
        src/test/fuzz/signet.cpp
        src/test/fuzz/socks5.cpp
        src/test/fuzz/span.cpp
        src/test/fuzz/spanparsing.cpp
        src/test/fuzz/string.cpp
        src/test/fuzz/strprintf.cpp
        src/test/fuzz/system.cpp
        src/test/fuzz/timedata.cpp
        src/test/fuzz/torcontrol.cpp
        src/test/fuzz/transaction.cpp
        src/test/fuzz/tx_in.cpp
        src/test/fuzz/tx_out.cpp
        src/test/fuzz/tx_pool.cpp
        src/test/fuzz/txorphan.cpp
        src/test/fuzz/txrequest.cpp
        src/test/fuzz/util.cpp
        src/test/fuzz/util.h
        src/test/fuzz/utxo_snapshot.cpp
        src/test/fuzz/validation_load_mempool.cpp
        src/test/fuzz/versionbits.cpp
        src/test/util/blockfilter.cpp
        src/test/util/blockfilter.h
        src/test/util/chainstate.h
        src/test/util/logging.cpp
        src/test/util/logging.h
        src/test/util/mining.cpp
        src/test/util/mining.h
        src/test/util/net.cpp
        src/test/util/net.h
        src/test/util/script.cpp
        src/test/util/script.h
        src/test/util/setup_common.cpp
        src/test/util/setup_common.h
        src/test/util/str.cpp
        src/test/util/str.h
        src/test/util/transaction_utils.cpp
        src/test/util/transaction_utils.h
        src/test/util/txmempool.cpp
        src/test/util/txmempool.h
        src/test/util/validation.cpp
        src/test/util/validation.h
        src/test/addrman_tests.cpp
        src/test/allocator_tests.cpp
        src/test/amount_tests.cpp
        src/test/argsman_tests.cpp
        src/test/arith_uint256_tests.cpp
        src/test/banman_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bech32_tests.cpp
        src/test/bip32_tests.cpp
        src/test/blockchain_tests.cpp
        src/test/blockencodings_tests.cpp
        src/test/blockfilter_index_tests.cpp
        src/test/blockfilter_tests.cpp
        src/test/blockmanager_tests.cpp
        src/test/bloom_tests.cpp
        src/test/bswap_tests.cpp
        src/test/checkqueue_tests.cpp
        src/test/coins_tests.cpp
        src/test/coinstatsindex_tests.cpp
        src/test/compilerbug_tests.cpp
        src/test/compress_tests.cpp
        src/test/crypto_tests.cpp
        src/test/cuckoocache_tests.cpp
        src/test/dbwrapper_tests.cpp
        src/test/denialofservice_tests.cpp
        src/test/descriptor_tests.cpp
        src/test/flatfile_tests.cpp
        src/test/fs_tests.cpp
        src/test/getarg_tests.cpp
        src/test/hash_tests.cpp
        src/test/headers_sync_chainwork_tests.cpp
        src/test/httpserver_tests.cpp
        src/test/i2p_tests.cpp
        src/test/interfaces_tests.cpp
        src/test/key_io_tests.cpp
        src/test/key_tests.cpp
        src/test/logging_tests.cpp
        src/test/main.cpp
        src/test/mempool_tests.cpp
        src/test/merkle_tests.cpp
        src/test/merkleblock_tests.cpp
        src/test/miner_tests.cpp
        src/test/miniscript_tests.cpp
        src/test/minisketch_tests.cpp
        src/test/multisig_tests.cpp
        src/test/net_peer_eviction_tests.cpp
        src/test/net_tests.cpp
        src/test/netbase_tests.cpp
        src/test/orphanage_tests.cpp
        src/test/pmt_tests.cpp
        src/test/policy_fee_tests.cpp
        src/test/policyestimator_tests.cpp
        src/test/pow_tests.cpp
        src/test/prevector_tests.cpp
        src/test/raii_event_tests.cpp
        src/test/random_tests.cpp
        src/test/rbf_tests.cpp
        src/test/rest_tests.cpp
        src/test/result_tests.cpp
        src/test/reverselock_tests.cpp
        src/test/rpc_tests.cpp
        src/test/sanity_tests.cpp
        src/test/scheduler_tests.cpp
        src/test/script_p2sh_tests.cpp
        src/test/script_parse_tests.cpp
        src/test/script_segwit_tests.cpp
        src/test/script_standard_tests.cpp
        src/test/script_tests.cpp
        src/test/scriptnum10.h
        src/test/scriptnum_tests.cpp
        src/test/serfloat_tests.cpp
        src/test/serialize_tests.cpp
        src/test/settings_tests.cpp
        src/test/sighash_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/skiplist_tests.cpp
        src/test/sock_tests.cpp
        src/test/streams_tests.cpp
        src/test/sync_tests.cpp
        src/test/system_tests.cpp
        src/test/timedata_tests.cpp
        src/test/torcontrol_tests.cpp
        src/test/transaction_tests.cpp
        src/test/txindex_tests.cpp
        src/test/txpackage_tests.cpp
        src/test/txreconciliation_tests.cpp
        src/test/txrequest_tests.cpp
        src/test/txvalidation_tests.cpp
        src/test/txvalidationcache_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/util_threadnames_tests.cpp
        src/test/validation_block_tests.cpp
        src/test/validation_chainstate_tests.cpp
        src/test/validation_chainstatemanager_tests.cpp
        src/test/validation_flush_tests.cpp
        src/test/validation_tests.cpp
        src/test/validationinterface_tests.cpp
        src/test/versionbits_tests.cpp
        src/univalue/include/univalue.h
        src/univalue/include/univalue_escapes.h
        src/univalue/include/univalue_utffilter.h
        src/univalue/lib/univalue.cpp
        src/univalue/lib/univalue_get.cpp
        src/univalue/lib/univalue_read.cpp
        src/univalue/lib/univalue_write.cpp
        src/univalue/test/object.cpp
        src/univalue/test/test_json.cpp
        src/univalue/test/unitester.cpp
        src/util/asmap.cpp
        src/util/asmap.h
        src/util/bip32.cpp
        src/util/bip32.h
        src/util/bitdeque.h
        src/util/bytevectorhash.cpp
        src/util/bytevectorhash.h
        src/util/check.cpp
        src/util/check.h
        src/util/epochguard.h
        src/util/error.cpp
        src/util/error.h
        src/util/fastrange.h
        src/util/fees.cpp
        src/util/fees.h
        src/util/getuniquepath.cpp
        src/util/getuniquepath.h
        src/util/golombrice.h
        src/util/hash_type.h
        src/util/hasher.cpp
        src/util/hasher.h
        src/util/macros.h
        src/util/message.cpp
        src/util/message.h
        src/util/moneystr.cpp
        src/util/moneystr.h
        src/util/overflow.h
        src/util/overloaded.h
        src/util/rbf.cpp
        src/util/rbf.h
        src/util/readwritefile.cpp
        src/util/readwritefile.h
        src/util/result.h
        src/util/serfloat.cpp
        src/util/serfloat.h
        src/util/settings.cpp
        src/util/settings.h
        src/util/sock.cpp
        src/util/sock.h
        src/util/spanparsing.cpp
        src/util/spanparsing.h
        src/util/strencodings.cpp
        src/util/strencodings.h
        src/util/string.cpp
        src/util/string.h
        src/util/syscall_sandbox.cpp
        src/util/syscall_sandbox.h
        src/util/syserror.cpp
        src/util/syserror.h
        src/util/system.cpp
        src/util/system.h
        src/util/thread.cpp
        src/util/thread.h
        src/util/threadinterrupt.cpp
        src/util/threadinterrupt.h
        src/util/threadnames.cpp
        src/util/threadnames.h
        src/util/time.cpp
        src/util/time.h
        src/util/tokenpipe.cpp
        src/util/tokenpipe.h
        src/util/trace.h
        src/util/translation.h
        src/util/types.h
        src/util/ui_change_type.h
        src/util/vector.h
        src/wallet/rpc/addresses.cpp
        src/wallet/rpc/backup.cpp
        src/wallet/rpc/coins.cpp
        src/wallet/rpc/encrypt.cpp
        src/wallet/rpc/signmessage.cpp
        src/wallet/rpc/spend.cpp
        src/wallet/rpc/transactions.cpp
        src/wallet/rpc/util.cpp
        src/wallet/rpc/util.h
        src/wallet/rpc/wallet.cpp
        src/wallet/rpc/wallet.h
        src/wallet/test/fuzz/coinselection.cpp
        src/wallet/test/fuzz/notifications.cpp
        src/wallet/test/fuzz/parse_iso8601.cpp
        src/wallet/test/coinselector_tests.cpp
        src/wallet/test/db_tests.cpp
        src/wallet/test/feebumper_tests.cpp
        src/wallet/test/init_test_fixture.cpp
        src/wallet/test/init_test_fixture.h
        src/wallet/test/init_tests.cpp
        src/wallet/test/ismine_tests.cpp
        src/wallet/test/psbt_wallet_tests.cpp
        src/wallet/test/rpc_util_tests.cpp
        src/wallet/test/scriptpubkeyman_tests.cpp
        src/wallet/test/spend_tests.cpp
        src/wallet/test/util.cpp
        src/wallet/test/util.h
        src/wallet/test/wallet_crypto_tests.cpp
        src/wallet/test/wallet_test_fixture.cpp
        src/wallet/test/wallet_test_fixture.h
        src/wallet/test/wallet_tests.cpp
        src/wallet/test/wallet_transaction_tests.cpp
        src/wallet/test/walletdb_tests.cpp
        src/wallet/test/walletload_tests.cpp
        src/wallet/bdb.cpp
        src/wallet/bdb.h
        src/wallet/coincontrol.cpp
        src/wallet/coincontrol.h
        src/wallet/coinselection.cpp
        src/wallet/coinselection.h
        src/wallet/context.cpp
        src/wallet/context.h
        src/wallet/crypter.cpp
        src/wallet/crypter.h
        src/wallet/db.cpp
        src/wallet/db.h
        src/wallet/dump.cpp
        src/wallet/dump.h
        src/wallet/external_signer_scriptpubkeyman.cpp
        src/wallet/external_signer_scriptpubkeyman.h
        src/wallet/feebumper.cpp
        src/wallet/feebumper.h
        src/wallet/fees.cpp
        src/wallet/fees.h
        src/wallet/init.cpp
        src/wallet/interfaces.cpp
        src/wallet/ismine.h
        src/wallet/load.cpp
        src/wallet/load.h
        src/wallet/receive.cpp
        src/wallet/receive.h
        src/wallet/salvage.cpp
        src/wallet/salvage.h
        src/wallet/scriptpubkeyman.cpp
        src/wallet/scriptpubkeyman.h
        src/wallet/spend.cpp
        src/wallet/spend.h
        src/wallet/sqlite.cpp
        src/wallet/sqlite.h
        src/wallet/transaction.cpp
        src/wallet/transaction.h
        src/wallet/wallet.cpp
        src/wallet/wallet.h
        src/wallet/walletdb.cpp
        src/wallet/walletdb.h
        src/wallet/wallettool.cpp
        src/wallet/wallettool.h
        src/wallet/walletutil.cpp
        src/wallet/walletutil.h
        src/zmq/zmqabstractnotifier.cpp
        src/zmq/zmqabstractnotifier.h
        src/zmq/zmqnotificationinterface.cpp
        src/zmq/zmqnotificationinterface.h
        src/zmq/zmqpublishnotifier.cpp
        src/zmq/zmqpublishnotifier.h
        src/zmq/zmqrpc.cpp
        src/zmq/zmqrpc.h
        src/zmq/zmqutil.cpp
        src/zmq/zmqutil.h
        src/addrdb.cpp
        src/addrdb.h
        src/addrman.cpp
        src/addrman.h
        src/addrman_impl.h
        src/arith_uint256.cpp
        src/arith_uint256.h
        src/attributes.h
        src/banman.cpp
        src/banman.h
        src/base58.cpp
        src/base58.h
        src/bech32.cpp
        src/bech32.h
        src/bitcoin-chainstate.cpp
        src/bitcoin-cli.cpp
        src/bitcoin-tx.cpp
        src/bitcoin-util.cpp
        src/bitcoin-wallet.cpp
        src/bitcoind.cpp
        src/blockencodings.cpp
        src/blockencodings.h
        src/blockfilter.cpp
        src/blockfilter.h
        src/chain.cpp
        src/chain.h
        src/chainparams.cpp
        src/chainparams.h
        src/chainparamsbase.cpp
        src/chainparamsbase.h
        src/chainparamsseeds.h
        src/checkqueue.h
        src/clientversion.cpp
        src/clientversion.h
        src/coins.cpp
        src/coins.h
        src/compressor.cpp
        src/compressor.h
        src/core_io.h
        src/core_memusage.h
        src/core_read.cpp
        src/core_write.cpp
        src/cuckoocache.h
        src/dbwrapper.cpp
        src/dbwrapper.h
        src/deploymentinfo.cpp
        src/deploymentinfo.h
        src/deploymentstatus.cpp
        src/deploymentstatus.h
        src/dummywallet.cpp
        src/external_signer.cpp
        src/external_signer.h
        src/flatfile.cpp
        src/flatfile.h
        src/fs.cpp
        src/fs.h
        src/hash.cpp
        src/hash.h
        src/headerssync.cpp
        src/headerssync.h
        src/httprpc.cpp
        src/httprpc.h
        src/httpserver.cpp
        src/httpserver.h
        src/i2p.cpp
        src/i2p.h
        src/indirectmap.h
        src/init.cpp
        src/init.h
        src/key.cpp
        src/key.h
        src/key_io.cpp
        src/key_io.h
        src/logging.cpp
        src/logging.h
        src/mapport.cpp
        src/mapport.h
        src/memusage.h
        src/merkleblock.cpp
        src/merkleblock.h
        src/net.cpp
        src/net.h
        src/net_permissions.cpp
        src/net_permissions.h
        src/net_processing.cpp
        src/net_processing.h
        src/net_types.cpp
        src/net_types.h
        src/netaddress.cpp
        src/netaddress.h
        src/netbase.cpp
        src/netbase.h
        src/netgroup.cpp
        src/netgroup.h
        src/netmessagemaker.h
        src/noui.cpp
        src/noui.h
        src/outputtype.cpp
        src/outputtype.h
        src/pow.cpp
        src/pow.h
        src/prevector.h
        src/protocol.cpp
        src/protocol.h
        src/psbt.cpp
        src/psbt.h
        src/pubkey.cpp
        src/pubkey.h
        src/random.cpp
        src/random.h
        src/randomenv.cpp
        src/randomenv.h
        src/rest.cpp
        src/rest.h
        src/reverse_iterator.h
        src/scheduler.cpp
        src/scheduler.h
        src/serialize.h
        src/shutdown.cpp
        src/shutdown.h
        src/signet.cpp
        src/signet.h
        src/span.h
        src/streams.h
        src/sync.cpp
        src/sync.h
        src/threadsafety.h
        src/timedata.cpp
        src/timedata.h
        src/tinyformat.h
        src/torcontrol.cpp
        src/torcontrol.h
        src/txdb.cpp
        src/txdb.h
        src/txmempool.cpp
        src/txmempool.h
        src/txorphanage.cpp
        src/txorphanage.h
        src/txrequest.cpp
        src/txrequest.h
        src/uint256.cpp
        src/uint256.h
        src/undo.h
        src/validation.cpp
        src/validation.h
        src/validationinterface.cpp
        src/validationinterface.h
        src/version.h
        src/versionbits.cpp
        src/versionbits.h
        src/walletinitinterface.h
        src/warnings.cpp
        src/warnings.h)
